#BETA#BETA#BETA#BETA#BETA#BETA#
B                             B
E            SIESTA           E
#             4.1             #
T             b-4             T
A                             A
#BETA#BETA#BETA#BETA#BETA#BETA#

Release notes for siesta 4.1-b4 beta version

--- Fixed minor inconsistencies when handling Bessel basis

--- Updated all diagonalization routines
    - ELPA and MRRR for k-point sampling.
    - Less memory usage

--- Added more digits to dDmax which may be relevant when performing
    SOC/Non-Co calculations.

--- Fixed bug related to writing out non-colinear spin eigenvalues,
    and also for spin-orbit. (lp:1708634)

--- Fixed parallel PDOS calculations of non-colinear and spin-orbit.
    (lp:1718162)

--- Added calculated charges to the Lua interface (check the charges
    while running).

--- Fixed lots of compilation issues related to the utilities
    (lp:1712317, lp:1712319, lp:1711850)

--- Fix for reading a ghost basis (lp:1736455)

--- Fix when fdf-input lines are too long, instead of discarding the
    remaining line, fdf now "dies" to inform users of possible erroneous
    input. (lp:1728281)

--- Fixed Monkhorst-Pack displacements when the displacement was larger
    than 1 (lp:1721479)

--- Fix for possible heap allocated arrays (Intel compilers) (lp:1704370)

--- Ensured many files to be closed properly at the end of the runs.

--- Added basic compiler information to the siesta/transiesta/tbtrans
    header (compiler output)

--- Performing SOC calculations does not not require all species
    to have SOC contributions.

--- TranSiesta / TBtrans changes:

-- Many bug-fixes related to pivoting tables, this should only
   change the effective BTD matrices, and has no relevance to the
   accuracy of the calculations

-- Fixed the default 2-terminal Poisson ramp. The ramp is now
   defaulted to be positioned in the central region.
     TS.Poisson ramp-central

-- Small memory reduction by de-allocating unused siesta memory when